feat: add warehouses api
